🎨 add theory layout + basic text styling

--- a/src/pages/avmis/theory.mdx
+++ b/src/pages/avmis/theory.mdx
@@ -1,7 +1,9 @@
-**Преподаёт:** кафедра вычислительной техники
-**Лектор:** Мусихин Александр Григорьевич
-**Семинарист:** Пономарев Артём Николаевич
-## Вопросы к зачёту
+---
+layout: ../../layouts/TheoryLayout.astro
+title: Архитектура вычислительных машин и систем
+icon: robotic-arm
+subheader: кафедра вычислительной техники
+---
 
 #### 1. Какая архитектура считается фоннеймановской?
 
