--- a/src/pages/calculus/theory.mdx
+++ b/src/pages/calculus/theory.mdx
@@ -1,8 +1,9 @@
-**Преподаёт:** кафедра высшей математики–3
-**Лектор:** Кытманов Алексей Александрович
-**Семинарист:** Козлова Ольга Юрьевна
-
-## Вопросы к экзамену
+---
+layout: ../../layouts/TheoryLayout.astro
+title: Математический анализ
+icon: chart-up
+subheader: кафедра высшей математики-3
+---
 
 #### 1. Определение числового ряда, его сходимости. Примеры сходящихся и расходящихся рядов. Необходимый признак сходимости числового ряда. Признаки сравнения рядов с положительными членами.
 
