--- a/src/pages/comp-maths/theory.mdx
+++ b/src/pages/comp-maths/theory.mdx
@@ -1,8 +1,9 @@
-**Преподаёт:** кафедра прикладной математики
-**Лектор:** Аристов Анатолий Игоревич
-**Семинарист:** Староверов Игорь Николаевич
-
-## Вопросы к зачёту
+---
+layout: ../../layouts/TheoryLayout.astro
+title: Вычислительная математика
+icon: abacus
+subheader: кафедра прикладной математики
+---
 
 #### 1. Классификация погрешностей численного решения задач
 
