--- a/src/pages/economics/theory.mdx
+++ b/src/pages/economics/theory.mdx
@@ -1,8 +1,9 @@
-**Преподаёт:** кафедра экономики
-**Лектор:** Григоренко Ольга Викторовна
-**Семинарист:** Григоренко Ольга Викторовна
-
-## Вопросы к зачёту
+---
+layout: ../../layouts/TheoryLayout.astro
+title: Экономическая культура
+icon: wallet
+subheader: кафедра экономики
+---
 
 #### 1. Этапы развития экономических знаний: меркантилизм, физиократия, классическая политэкономия, марксизм.
 
