--- a/src/pages/electro/theory.mdx
+++ b/src/pages/electro/theory.mdx
@@ -1,7 +1,9 @@
-**Преподаёт:** кафедра электротехнических систем
-**Лектор:** Шкатов П. Н.
-**Семинарист:** Шмелёва А. Н.
+---
+layout: ../../layouts/TheoryLayout.astro
+title: Электротехника
+icon: lightning-rod
+subheader: кафедра электротехнических систем
+---
 
-## Вопросы к экзамену
 
-🛑 **Пока недоступно**
+🛑 Вопросы по электротехнике ещё не опубликованы.
