--- a/src/pages/english/theory.mdx
+++ b/src/pages/english/theory.mdx
@@ -1,7 +1,9 @@
-**Преподаёт:** кафедра иностранных языков
-**Семинарист:** Филипская Анастасия Вадимовна
-
-## Вопросы к зачёту
+---
+layout: ../../layouts/TheoryLayout.astro
+title: Английский язык
+icon: tickets
+subheader: кафедра иностранных языков
+---
 
 #### 1. History of computers
 
