--- a/src/pages/infrastructure/theory.mdx
+++ b/src/pages/infrastructure/theory.mdx
@@ -1,8 +1,9 @@
-**Преподаёт:** кафедра практической и прикладной информатики
-**Лектор:** Миронов Антон Николаевич
-**Семинарист:** Воронцов Юрий Алексеевич
-
-## Вопросы к экзамену
+---
+layout: ../../layouts/TheoryLayout.astro
+title: Информационно-технологическая инфраструктура
+icon: flipchart
+subheader: кафедра практической и прикладной информатики ❤
+---
 
 #### 1. Архитектура предприятия. Понятие АП и его составляющие.
 
@@ -199,7 +200,7 @@
 **Основные требования:**
 * Рекомендуемая *ASHRAE* температура в помещении 18...22°С;
 * Влажность воздуха в серверной должна быть в пределах от 20 % до 80 % без конденсации влаги; скорость изменения влажности — 6 % в час;
-* Запылённость не должна превышать 0,75 мг/м³ {СН 512-78};
+* Запылённость не должна превышать 0,75 мг/м³ (СН 512-78);
 * Давление в серверной **должно** превышать давление в соседних помещениях. Рекомендуется превышение давления не менее 14.7 Па;
 * Уровень освещения должен составлять не менее 500 лк, измеренном на высоте 1 метр в горизонтальной плоскости;
 * Уровень электромагнитного излучения не должен превышать 3 В/м во всех диапазонах частот;
