--- a/src/pages/java/theory.mdx
+++ b/src/pages/java/theory.mdx
@@ -1,8 +1,9 @@
-**Преподаёт:** кафедра инструментального и прикладного программного обеспечения
-**Лектор:** Зорина Наталья Валентиновна
-**Семинарист:** Романченко Алексей Евгеньевич
-
-## Вопросы к экзамену
+---
+layout: ../../layouts/TheoryLayout.astro
+title: Программирование на языке Джава
+icon: programming
+subheader: кафедра инструментального и прикладного программного обеспечения
+---
 
 #### 1. К какому типу языков относится язык Джава?
 
