--- a/src/pages/philosophy/theory.mdx
+++ b/src/pages/philosophy/theory.mdx
@@ -1,8 +1,9 @@
-**Преподаёт:** кафедра гуманитарных и социальных наук
-**Лектор:** Арапова Эльмира Асфаровна
-**Семинарист:** Цибизова Лилия Александровна
-
-## Вопросы к экзамену
+---
+layout: ../../layouts/TheoryLayout.astro
+title: Философия
+icon: lincoln
+subheader: кафедра гуманитарных и социальных наук
+---
 
 #### 1. Предмет философии. Структура и функции философии. Философия и мировоззрение.
 
