--- a/src/pages/pois/theory.mdx
+++ b/src/pages/pois/theory.mdx
@@ -1,8 +1,9 @@
-**Преподаёт:** кафедра практической и прикладной информатики
-**Лектор:** 🛑 **неизвестно**
-**Семинарист:** Борзых Никита Юрьевич
-
-## Вопросы к зачёту
+---
+layout: ../../layouts/TheoryLayout.astro
+title: Предметно-ориентированные информационные системы
+icon: warehouse
+subheader: кафедра практической и прикладной информатики ❤
+---
 
 #### 1. Понятие информационной системы.
 
