--- a/src/pages/sports/theory.mdx
+++ b/src/pages/sports/theory.mdx
@@ -1,6 +1,9 @@
-**Преподаёт:** кафедра физического воспитания
+---
+layout: ../../layouts/TheoryLayout.astro
+title: Физическая культура и спорт
+icon: weightlifter
+subheader: кафедра физического воспитания
+---
 
-## Вопросы к зачёту
-
-🛑 **Пока недоступно**
+Тут я бессилен
 
