--- a/src/pages/avmis/theory.mdx
+++ b/src/pages/avmis/theory.mdx
@@ -177,3 +177,232 @@ subheader: кафедра вычислительной техники
 
 🛑 **Написать ответ**
 
+#### 31. ВМ гарвардского типа отличаются от фоннеймановских ВМ:
+
+* [x] наличием отдельных блоков памяти для хранения программ и данных и большим количеством шин
+* [ ] совмещением свойств внешней и основной памяти
+* [ ] меньшей сложностью и более высокой надежностью
+* [ ] меньшим количеством составляющих элементов в структурной схеме
+
+#### 32. К самому нижнему уровню управления центрального процессора НЕ относится функция:
+
+* [ ] выборки очередной команды программы
+* [x] согласования работы устройств ввода-вывода
+* [ ] выработки последовательности управляющих сигналов для выполнения операции, заданной в команде
+* [ ] определения адреса следующей команды программы, которую необходимо выбрать и выполнить на очередном шаге работы ЭВМ
+
+#### 33. Разрядность поля кода операции в формате команды определяется:
+
+* [x] количеством машинных команд ВМ
+* [ ] разрядностью шины данных ВМ
+* [ ] разрядностью адресной шины ВМ
+* [ ] объемом внешней памяти ВМ
+
+#### 34. Разрядность адресного поля в формате команды при использовании только прямой адресации определяется:
+
+* [x] объемом оперативной памяти ВМ
+* [ ] количеством регистров общего назначения
+* [ ] количеством машинных команд ВМ
+* [ ] объемом внешней памяти ВМ
+
+#### 35. Управляющее слово операционного устройства центрального процессора состоит:
+
+* [ ] из сигналов управления дешифратора и мультиплексоров
+* [ ] из набора входов управления дешифратора, мультиплексора и памяти
+* [x] из совокупности управляющих сигналов для устройств, входящих в состав ЦП, упорядоченных определенным образом
+* [ ] из сигналов управления памятью ВМ
+
+#### 36. Какой цифровой блок имеет обозначение DC:
+
+* [ ] шифратор
+* [x] дешифратор
+* [ ] мультиплексор
+* [ ] демультиплексор
+
+#### 37. Какой цифровой блок имеет обозначение MS:
+
+* [ ] дешифратор
+* [x] мультиплексор
+* [ ] демультиплексор
+* [ ] шифратор
+
+#### 38. Какой цифровой блок имеет обозначение SRAM:
+
+* [ ] ОЗУ
+* [x] статическое ОЗУ
+* [ ] динамическое ОЗУ
+* [ ] ОЗУ с удвоенной скоростью передачи данных
+
+#### 39. Какой цифровой блок имеет обозначение RAM:
+
+* [ ] статическое ОЗУ
+* [x] ОЗУ
+* [ ] динамическое ОЗУ
+* [ ] ОЗУ с удвоенной скоростью передачи данных
+
+#### 40. Какой цифровой блок имеет обозначение DRAM:
+
+* [ ] ОЗУ
+* [x] динамическое ОЗУ
+* [ ] ОЗУ с удвоенной скоростью передачи данных
+* [ ] статическое ОЗУ
+
+#### 41. Какой цифровой блок имеет обозначение ROM:
+
+* [ ] ПЗУ, программируемое пользователем
+* [x] масочное ПЗУ
+* [ ] ПЗУ с электрическим программированием и ультрафиолетовым стиранием
+* [ ] ПЗУ с электрическим программированием и стиранием
+
+#### 42. Выберите правильное окончание определения: «Часть памяти компьютера, которая используется для хранения программ и данных во время решения задачи, называется …»:
+
+* [ ] внутренняя память
+* [ ] внешняя память
+* [x] оперативная память
+* [ ] постоянная память
+* [ ] дисковая память
+
+#### 43. Отметьте вид памяти, в которой возможен доступ ко многим ячейкам памяти по их содержимому:
+
+* [ ] оперативная память
+* [ ] постоянная память
+* [ ] дисковая память
+* [x] ассоциативная память
+
+#### 44. Данные организованы в виде некоторой файловой системы в типе памяти:
+
+* [ ] внутренняя память
+* [x] внешняя память
+* [ ] оперативная память
+* [ ] постоянная память
+
+#### 45. Стековая память — это:
+
+* [x] память, в которой обмен информацией между остальными устройствами ЭВМ и стеком всегда выполняется только через верхнюю ячейку — вершину стека
+* [ ] память, в которой доступ к ячейкам возможен по признакам содержимого памяти
+* [ ] память с произвольным доступом
+
+#### 46. Указатель стека указывает на:
+
+* [ ] дно стека
+* [x] вершину стека
+* [ ] следующую ячейку стека после последней занятой ячейки
+* [ ] произвольную ячейку стека
+
+#### 47. Кэш-память используется:
+
+* [x] для ускорения обращения процессора к данным и командам программы
+* [ ] для промежуточной буферизации данных
+* [ ] для долговременного хранения данных
+* [ ] для кратковременного хранения адресов памяти ВМ
+
+#### 48. Наиболее быстродействующей в ЭВМ является память:
+
+* [x] регистровая память
+* [ ] кэш-память
+* [ ] постоянная память
+* [ ] оперативная память
+
+#### 49. Цикл прерывания в устройстве управления центрального процессора предназначен:
+
+* [x] для приостановки выполнения основной программы при обработке запроса на прерывание от внешнего устройства
+* [ ] для внепланового завершения выполняемой программы
+* [ ] для смены выполняемой программы при окончании кванта времени, выделенного процессу
+* [ ] для аварийной остановки вычислений в ВМ
+
+#### 50. Польская Инверсная (бесскобочная) Запись (ПОЛИЗ) применяется:
+
+* [ ] для шифрования данных
+* [x] для организации вычислений в стековой ВМ
+* [ ] для более наглядного представления математических выражений
+* [ ] для дешифрования адресов внешней памяти
+
+#### 51. Выберите правильное окончание определения: «Часть памяти компьютера, которая используется для долговременного хранения программ и данных, называется …»:
+
+* [ ] внутренняя память
+* [ ] оперативная память
+* [x] постоянная память
+* [ ] дисковая память
+
+#### 52. Укажите тип памяти, к которому относится следующее описание: «Данные хранятся на полупроводниковом кристалле, их можно читать и записывать только блоками. Чтением и записью управляет контроллер»:
+
+* [ ] память на жестких дисках
+* [x] флэш-память
+* [ ] оперативная память
+* [ ] постоянная память
+* [ ] память на лазерных дисках
+
+#### 53. Что означает английское сокращение SSD:
+
+* [ ] жесткий диск «винчестер»
+* [ ] оперативная память (ОЗУ)
+* [ ] постоянная память (ПЗУ)
+* [x] диск на основе флэш-памяти
+* [ ] лазерный диск
+
+#### 54. С помощью сканера в ЭВМ текст вводится:
+
+* [x] сканер вводит текст в виде рисунка
+* [ ] сканер сам распознает текст
+* [ ] сканер не умеет вводить текст
+* [ ] сканер может ввести текст только на одном заданном языке
+
+#### 55. Для ввода графической информации не используется устройство:
+
+* [x] микрофон
+* [ ] сканер
+* [ ] фотоаппарат
+* [ ] веб-камера
+
+#### 56. Достоинством порта USB не является:
+
+* [x] это порт параллельной передачи данных
+* [ ] можно подключать устройства, не выключая питание
+* [ ] высокая скорость передачи данных
+* [ ] можно подключать несколько устройств к одному порту
+
+#### 57. Характеристикой накопителей с жесткими магнитными дисками не является:
+
+* [ ] цилиндр
+* [ ] сектор
+* [x] район
+* [ ] дорожка
+* [ ] зона
+* [ ] пластина
+
+#### 58. Объем форматированного магнитного диска по сравнению с неформатированным меньше примерно:
+
+* [ ] на 10 %
+* [x] на 15 %
+* [ ] на 20 %
+* [ ] на 25 %
+
+#### 59. Форм-фактор накопителя на жестком магнитном диске — это:
+
+* [ ] параметр форматирования диска
+* [ ] скорость вращения шпинделя
+* [x] физический размер в дюймах
+* [ ] количество секторов на дорожках диска
+
+#### 60. Назначение регистра – счетчика команд:
+
+* [ ] подсчет количества выполненных команд программы
+* [ ] подсчет количества команд в программе, оставшихся невыполненными
+* [x] указатель адреса очередной выполняемой команды
+* [ ] временное хранение адресов внешней памяти
+
+#### 61. Операционная система — это *(дайте определение)*.
+
+**Операционная система** — программное обеспечение, управляющее компьютерами и позволяющее запускать на них прикладные программы.
+
+#### 62. Прикладное программное обеспечение — это *(дайте определение)*.
+
+**Прикладное ПО** — программа, ориентированная на решение конкретных задач.
+
+#### 63. Разделение времени (многопользовательский режим) для операционной системы — это *(дайте определение)*.
+
+**Разделение времени** — способ распределения вычислительных ресурсов между многими пользователями с помощью мультипрограммирования и многозадачности.
+
+#### 64. Пакетная обработка — это *(дайте определение)*.
+
+**Пакетная обработка** — способ запуска задач на исполнение для избегания простоев вычислительных систем. Фактически представляет собой список запускаемых программ с указанием параметров запуска и входных данных. Задачи запускаются последовательно.
