--- a/src/pages/avmis/theory.mdx
+++ b/src/pages/avmis/theory.mdx
@@ -85,7 +85,7 @@ subheader: кафедра вычислительной техники
 
 #### 9. Какая функция не относится к самому нижнему уровню управления центрального процессора?
 
-🛑 **Написать ответ**
+Функция **согласования работы устройств ввода-вывода.**
 
 #### 10. Какую функцию в операционном устройстве центрального процессора выполняет мультиплексор?
 
@@ -93,7 +93,7 @@ subheader: кафедра вычислительной техники
 
 #### 11. Какую функцию в операционном устройстве центрального процессора выполняет дешифратор?
 
-🛑 **Написать ответ**
+Функцию **преобразования кода команды в управляющие сигналы.**
 
 #### 12. Какие типы устройства управления ЦП выделяют по способам формирования управляющего слова ВМ?
 
@@ -109,7 +109,16 @@ subheader: кафедра вычислительной техники
 
 #### 15. Что такое память ВМ? Перечислите различные виды памяти по функциональному назначению.
 
-🛑 **Написать ответ**
+**Память ВМ** — часть вычислительной машины, физическое устройство или среда для хранения данных, используемая в вычислениях систем в течение определённого времени.
+
+##### Виды памяти:
+* Память с последовательным доступом (например, стековая);
+* Память с произвольным доступом;
+* Адресуемая память;
+* Ассоциативная память;
+* Первичная память (регистры, кэш);
+* Вторичная память (оперативная);
+* Третичная память (внешняя).
 
 #### 16. Какой цифровой блок имеет обозначение SRAM?
 
@@ -137,11 +146,11 @@ subheader: кафедра вычислительной техники
 
 #### 22. Назовите вид памяти, в которой возможен доступ ко многим ячейкам памяти по их содержимому.
 
-🛑 **Написать ответ**
+**Ассоциативная память.**
 
 #### 23. В каком типе памяти данные организуются в виде некоторой файловой системы?
 
-🛑 **Написать ответ**
+Во **внешней памяти.**
 
 #### 24. Как называется интервал времени от момента посылки запроса информации до момента получения результата на шине данных?
 
@@ -175,7 +184,7 @@ subheader: кафедра вычислительной техники
 
 #### 30. Для чего предназначен цикл прерывания в устройстве управления центрального процессора?
 
-🛑 **Написать ответ**
+Для приостановки выполнения основной программы при обработке запроса на прерывание от внешнего устройства.
 
 #### 31. ВМ гарвардского типа отличаются от фоннеймановских ВМ:
 
@@ -406,3 +415,24 @@ subheader: кафедра вычислительной техники
 #### 64. Пакетная обработка — это *(дайте определение)*.
 
 **Пакетная обработка** — способ запуска задач на исполнение для избегания простоев вычислительных систем. Фактически представляет собой список запускаемых программ с указанием параметров запуска и входных данных. Задачи запускаются последовательно.
+
+#### 65. Мобильная (переносимая) ОС — это *(дайте определение)*.
+
+**Мобильная операционная система** — операционная система, используемая на нескольких семействах компьютеров путем переноса ее кода (возможно, с небольшими изменениями).
+
+#### 66. Фрагментация памяти — это *(дайте определение)*.
+
+**Фрагментация памяти** — это явление, при котором пространство для хранения используется неэффективно, снижая емкость или производительность, а часто и то, и другое.
+
+#### 67. Операционные системы реального времени — это *(дайте определение)*.
+
+**Операционная система реального времени** — это операционная система для вычислительных приложений реального времени, которая обрабатывает данные и события, имеющие критически определенные временные ограничения.
+
+#### 68. Симметричные ОС — это *(дайте определение)*.
+
+**Симметричная операционная система** — ОС, позволяющая двум и более процессорам одновременно подключаться к единой памяти.
+
+#### 69. Какие достоинства имеет монолитная архитектура ОС?
+
+* Высокая производительность, поскольку системные вызовы направляются непосредственно в ядро;
+* Простая архитектура.
