--- a/src/pages/calculus/theory.mdx
+++ b/src/pages/calculus/theory.mdx
@@ -112,4 +112,57 @@ $\sum_{n=1}^{\infty} (-1)^{n+1} (\frac{3n+1}{5n+3})^n$
 
 $\sum_{n=1}^{\infty} \frac{(-1)^n}{\sqrt[3]{n}}$ 
 
+#### 5. Определение функционального ряда, его области сходимости. Равномерная сходимость функционального ряда. Теорема Вейерштрасса.
 
+##### Функциональные ряды
+Пусть дана последовательность функций: $u_1(x), u_2(x), \dots, u_n(x), \dots$ определённых на некотором множестве $X$.
+
+Выражение вида:
+$$
+u_1(x) + u_2(x) + \dots + u_n(x) + \dots = \sum_{n=1}^{\infty} u_n(x)
+$$
+называется **функциональным рядом,** а множество $X$ — областью определения этого ряда.
+
+Если на место $x$ подставить значение из $X$, то функциональный ряд превратится в обычный числовой, причем при разных значениях он может как расходиться, так и сходиться.
+
+Множество значений переменной $x$, при которых функциональный ряд сходится, называется **областью сходимости** этого ряда.
+
+##### Равномерная сходимость
+Функциональный ряд $\sum_{n=1}^{\infty} u_n(x)$ называется равномерно сходящимся на множестве $X$, если этот ряд сходится при всех $x$, принадлежащих множеству $X$, и для любого $\varepsilon > 0$ найдется такой номер $N$, что для всех номеров $n > N$ и для любого $x \in X$ будет выполнено неравенство: $\lvert S_n(x) - S(x) \rvert < \varepsilon$.
+
+**Короче:** ряд сходится равномерно, если разница между суммой и частичной суммой для всех $x$ из области определения сколь угодно мала, начиная с некоторого номера $n$.
+
+Приняты такие обозначения:
+
+$\sum_{n=1}^{\infty} u_n(x) = S(x)$ — ряд сходится.
+
+$\sum_{n=1}^{\infty} u_n(x) \rightrightarrows S(x)$ — ряд сходится *равномерно.*
+
+##### Теорема Вейерштрасса (достаточное условие равномерной сходимости)
+Если члены функционального ряда $\sum_{n=1}^{\infty} u_n(x)$ при всех $x \in X$, удовлетворяют неравенству:
+$$
+\lvert u_n(x) \rvert \le a_n, n = 1, 2, 3, \dots
+$$
+где $a_n$ — члены некоторого сходящегося числового ряда $\sum_{n=1}^{\infty} a_n$,
+то функциональный ряд сходится абсолютно и равномерно на множестве $X$.
+
+Числовой ряд $\sum_{n=1}^{\infty} a_n$, удовлетворяющий условиям теоремы Вейерштрасса, называется **мажорирующим** числовым рядом для функционального ряда $\sum_{n=1}^{\infty} u_n(x)$ или **числовой мажорантой.**
+
+#### 6. Теорема о непрерывности суммы функционального ряда. Теорема о почленном интегрировании функционального ряда. Теорема о почленном дифференцировании функционального ряда.
+
+##### Теорема о непрерывности суммы функционального ряда
+Пусть функции $u_n(x)$ определены и непрерывны на отрезке $[a, b]$, а ряд $\sum_{n=1}^{\infty} u_n(x)$ сходится равномерно на этом отрезке.
+
+Тогда сумма ряда $S(x)$ непрерывна на этом отрезке.
+
+##### Теорема о почленном интегрировании функционального ряда
+Если функции $u_n(x)$ непрерывны на отрезке $[a,b]$, а ряд $\sum_{n=1}^{\infty} u_n(x)$ сходится равномерно на этом отрезке, то интеграл от суммы ряда $S(x)$ на отрезке $[a, b]$ представляется в виде суммы интегралов от членов этого ряда:
+$$
+\int_{a}^{b} S(x)dx = \int_{a}^{b} \sum_{n=1}^{\infty} u_n(x) dx = \sum_{n=1}^{\infty} \int_{a}^{b} u_n(x)dx
+$$
+
+##### Теорема о почленном дифференцировании функционального ряда
+Пусть функции $u_n(x)$ определены и непрерывны на отрезке $[a,b]$ и имеют на этом отрезке непрерывные производные $u_n'(x)$. Ряд $\sum_{n=1}^{\infty} u_n(x)$ сходится, а ряд $\sum_{n=1}^{\infty} u_n'(x)$ сходится равномерно на отрезке $[a,b]$. Тогда сумма $S(x)$ ряда $\sum_{n=1}^{\infty} u_n(x)$ дифференцируема на отрезке $[a,b]$, причем производная суммы равна сумме ряда из производных:
+$$
+S'(x) = \biggl( \sum_{n=1}^{\infty} u_n(x) \biggr)' = \sum_{n=1}^{\infty} u_n'(x)
+$$
