📖 fill comp maths 5.2, 6

--- a/src/pages/comp-maths/theory.mdx
+++ b/src/pages/comp-maths/theory.mdx
@@ -110,3 +110,33 @@ $$
 $$
 P_n(x) = y_0 + \frac{\Delta y_0}{h} (x - x_0) + \frac{\Delta^2 y_0}{2! h^2}(x - x_0)(x - x_1) + \dots + \frac{\Delta^n y_0}{n! h^n}(x - x_0)(x - x_1)\dots(x - x_{n - 1})
 $$
+
+Второй интерполяционный полином Ньютона позволяет начать интерполяцию с точки $x_n$, то есть улучшить приближение на правой границе интервала интерполяции.
+
+$$
+P_n(x) = a_0 + a_1(x - x_n) + a_2(x - x_{n-1})(x - x_n) + \dots + a_n(x - x_1)\dots(x - x_{n - 1})(x - x_n)
+$$
+
+Из структуры полинома следует, что $a_0 = y_n$.
+
+Подставив коэффициенты получим **второй интерполяционный полином Ньютона:**
+$$
+P_n(x) = y_n + \frac{\Delta y_{n-1}}{h}(x - x_n) + \frac{\Delta^2 y_{n-2}}{2! h^2}(x - x_{n-1})(x - x_n) + \dots + \frac{\Delta^n y_0}{n! h^n}(x - x_1)\dots(x - x_n)
+$$
+
+При построении интерполяционных полиномов используют *таблицу конечных разностей:*
+
+| #   | $x$   | $y$   | $\Delta y$   | $\Delta^2 y$   | $\Delta^3 y$   | $\dots$ |
+| --- | ----- | ----- | ------------ | -------------- | -------------- | ------- |
+| 0   | $x_0$ | $y_0$ | $\Delta y_0$ | $\Delta^2 y_0$ | $\Delta^3 y_0$ | $\dots$ |
+| 1   | $x_1$ | $y_1$ | $\Delta y_1$ | $\Delta^2 y_1$ | $\dots$        |         |
+| 2   | $x_2$ | $y_2$ | $\Delta y_2$ | $\dots$        |                |         |
+| 3   | $x_3$ | $y_3$ | $\dots$      |                |                |         |
+
+Для построения первого интерполяционного полинома Ньютона используют первую строку таблицы, а второго — побочную диагональ.
+
+#### 6. Обратное интерполирование.
+
+Обратное интерполирование применяют когда надо по известному значению функции найти **значение аргумента.**
+
+Если функция монотонна, можно поменять местами функцию и аргумент и воспользоваться уже известными способами. Если же функция не монотонна, записываем любой интерполяционный полином, используя известные значения и решаем полученное уравнение относительно аргумента.
