--- a/src/pages/calculus/theory.mdx
+++ b/src/pages/calculus/theory.mdx
@@ -166,3 +166,54 @@ $$
 $$
 S'(x) = \biggl( \sum_{n=1}^{\infty} u_n(x) \biggr)' = \sum_{n=1}^{\infty} u_n'(x)
 $$
+
+#### 7. Определение степенного ряда. Теорема Абеля. Радиус сходимости степенного ряда. Равномерная сходимость степенного ряда. Непрерывность суммы степенного ряда. Теоремы о почленном интегрировании и дифференцировании степенных рядов.
+
+**Степенным рядом** называется функциональный ряд вида: $\sum_{n=0}^{\infty} a_n(x - x_0)^n = a_0 + a_1x + a_2x^2 + \dots$
+
+Рассматриваются также степенные ряды более общего вида: $\sum_{n=0}^{\infty} (x-x_0)^n = a_0 + a_1(x - x_0) + a_2(x-x_0)^2 + \dots$
+
+Такие ряды с помощью замены переменной сводятся к виду $\sum_{n=0}^{\infty}a_nx^n$. Этот вид степенных рядов и будем изучать.
+
+Любой степенной ряд сходится при $x = 0$.
+##### Теорема Абеля
+Если степенной ряд $\sum_{n=0}^{\infty} a_nx^n$ сходится в некоторой точке $x_0 \ne 0$, то он абсолютно сходится в любой точке $x$, такой что $\lvert x \rvert < \lvert x_0 \rvert$.
+
+##### Интервал и радиус сходимости степенного ряда
+Рассмотрим ряд $\sum_{n=0}^{\infty} n! x^n$. Этот ряд сходится только в одной точке — $x_0 = 0$.
+
+Предположим, что для степенного ряда существуют отличные от нуля значения, при которых он сходится. Если множество этих значений не ограничено, то такой ряд по теореме Абеля сходится всюду, причём абсолютно.
+
+Пусть множество этих значений ограничено, причём $R$ — точная верхняя грань этого множества.
+Тогда степенной ряд сходится абсолютно в пределах интервала $(-R, R)$ и расходится вне этого интервала. На концах интервала ряд может как сходиться, так и расходиться.
+
+Такой интервал $(-R, R)$ называется **интервалом сходимости,** а число $R$ — **радиусом сходимости.** Если степенной ряд сходится на всей числовой оси, его радиус сходимости $R = \infty$, а если ряд сходится только в точке $x = 0$, то его $R = 0$.
+
+Интервал сходимости может быть найден с помощью признаков Даламбера и Коши, а вот чтобы установить сходимость на границах интервала понадобятся другие теоремы.
+
+##### Равномерная сходимость степенного ряда
+Степенной ряд $\sum_{n=0}^{\infty} a_nx^n$ сходится равномерно на любом отрезке, принадлежащем интервалу сходимости.
+
+Из этого следует, что сумма степенного ряда всегда непрерывна на всём интервале сходимости.
+
+##### Почленное интегрирование и дифференцирование степенных рядов
+Интеграл от суммы степенного ряда $S(x)$ на любом отрезке, принадлежащем интервалу сходимости, равен сумме ряда, полученного из данного степенного ряда путем почленного интегрирования на том же отрезке:
+$$
+\int_{a}^{b} S(x)dx = \int_{a}^{b} \big( \sum_{n=0}^{\infty} a_nx^n \big) dx = \sum_{n=0}^{\infty} \int_{a}^{b} a_nx^n dx
+$$
+
+Если в качестве отрезка интегрирования взять отрезок $[0, 𝑥]$, где $x \in (-R, R)$, то равенство приобретает вид:
+$$
+\int_{a}^{b} S(x)dx = \sum_{n=0}^{\infty} \frac{a_n}{n+1}x^{n+1} = \sum_{n=1}^{\infty} \frac{a_{n-1}}{n} x^n
+$$
+
+То есть в результате почленного интегрирования суммы ряда на отрезке $[0, x]$ получается тоже степенной ряд.
+
+При почленном дифференцировании степенного ряда получим также степенной ряд:
+$$
+\Bigg( \sum_{n=0}^{\infty} a_nx^n \Bigg)' = \sum_{n=0}^{\infty} (a_nx^n)' = \sum_{n=1}^{\infty} a_n \cdot nx^{n-1}
+$$
+
+Причём он будет иметь тот же радиус сходимости.
+
+Это означает, что сумма степенного ряда дифференцируема на интервале сходимости, и производная суммы равна сумме ряда из производных.
