--- a/src/pages/economics/theory.mdx
+++ b/src/pages/economics/theory.mdx
@@ -154,4 +154,88 @@ subheader: кафедра экономики
 2. *За счёт внешнего займа.* Государство занимает деньги у других государств или международных финансовых организаций. Такие долговые обязательства называются **государственным долгом.**
 3. *Монетизация.* Центральный банк выпускает в обращение дополнительные деньги, которые покрывают дефицит. Ведёт к инфляции.
 
+#### 6. Доходы и расходы фирмы. Финансовые результаты деятельности фирмы.
 
+**Доходы организации** — это полученные в денежной или натуральной форме экономические выгоды, необходимые для решения трех важнейших задач:
+* *обеспечение самоокупаемости:* основная часть доходов является источником возмещения текущих затрат, связанных с осуществлением деятельности организации;
+* *обеспечение выполнения финансовых обязательств перед государством:* часть доходов является источником выплат различных налоговых платежей в государственный и местные бюджеты и обязательных взносов в государственные внебюджетные фонды;
+* *обеспечение самофинансирования:* часть доходов является источником формирования прибыли, за счет которой образуются фонды производственного развития, дополнительного материального стимулирования работников, социальных выплат, выплат владельцам и т.п.
+
+Доходы фирмы состоят из:
+1. **выручки от реализации** — суммы денежных средств от произведенной и реализованной продукции (товаров или услуг), оплаченной покупателем или заказчиком;
+2. **внереализационных доходов**, непосредственно не связанных с основной производственной деятельностью. Их источниками служат доходы от участия в других компаниях; штрафы, пени, неустойки, полученные от контрагентов; проценты по выданным займам и другие доходы.
+
+**Расходы организации** — уменьшение экономических выгод в результате выбытия денежных средств и другого имущества или возникновения обязательств, приводящее к уменьшению ее капитала.
+
+Расходы обычно группируют так:
+1. материальные затраты;
+2. затраты на оплату труда;
+3. страховые взносы в связи с обязательным социальным страхованием работников, их пенсионным обеспечением и медицинским страхованием *(по установленным законодательством РФ нормам);*
+4. амортизация (от лат. *amortizatio* — «погашение»): перенос стоимости постепенно изнашиваемых основных средств (зданий, оборудования и т.п.) на стоимость выпускаемого продукта;
+5. прочие затраты.
+
+В зависимости от реагирования на изменение объёмов производства расходы делят на *постоянные* и *переменные.* К постоянным относят расходы, которые не меняются *(или меняются слабо)* в зависимости от изменения объёмов производства. Примеры таких расходов: аренда помещений, зарплаты административному персоналу. Переменные же расходы, наоборот, меняются в зависимости от объёмов производства. Чаще всего это расходы на закупку сырья, транспортные расходы и т. п.
+
+**Финансовый результат деятельности организации** — это разница между ее доходами и расходами. Если она положительна, то итог называется *прибылью*, если отрицательна — *убытком*.
+
+Прибыль — цель деятельности коммерческой организации. Если бизнес приносит прибыль, то это означает, что все расходы, связанные с производством продукции (работ, услуг), будут покрыты доходами. В этом случае говорят, что бизнес рентабелен, эффективен.
+
+#### 7. Доходы домашних хозяйств: факторные и не факторные, активные и пассивные, постоянные и случайные. Номинальный и реальный доход.
+
+**Домашнее хозяйство** — это хозяйство, которое ведется одним или несколькими совместно проживающими и имеющими общий бюджет людьми. Часто термин «домашнее хозяйство» используется как аналогичный термину «семья».
+
+**Личные доходы домашних хозяйств** — это материальные ресурсы, полученные физическим лицом или семьей в процессе применения профессиональных навыков и умений, продажи личного имущества или получения выплат от государства, определенных законом, и некоторыми другими способами.
+
+##### Виды доходов домашних хозяйств:
+1. *Факторные* и *не факторные.* **Факторными** доходами являются те, которые определяются факторами производства, основными из которых являются земля (земельные угодья и все естественные ресурсы); капитал; труд и предпринимательские способности. Домохозяйства, предоставляя в распоряжение фирм факторы производства, получают вознаграждение в виде заработной платы, ренты, процента и прибыли. **Нефакторные** — доходы, не связанные непосредственно с результатами труда, предпринимательской деятельностью или доходами от собственности. Это различные социальные трансферты — выплаты из госбюджета или специальных фондов (пенсии, пособия, стипендии и т.п.).
+2. *Денежные* и *натуральные.* **Натуральные** доходы населения — это не только доходы от личного подсобного хозяйства, социальная помощь в натуральной форме (продукты, одежда и т.д.), но и выдача заработной платы работникам в виде продукции в условиях кризиса неплатежей.
+3. *Активные* и *пассивные.* **Активные** доходы напрямую зависят от затраченного времени, уровня профессиональных знаний и навыков. Они прекращаются одновременно с прекращением выполнения деятельности. Основной категорией лиц, получающих активные доходы, являются наемные работники. Источниками **пассивного** дохода могут выступать проценты по банковским вкладам, доходы по ценным бумагам, от сдачи в аренду недвижимости, выплаты за авторские права на интеллектуальную собственность и т.п.
+4. *Постоянные* и *случайные.* **Постоянный** доход — это материальные средства, получаемые регулярно за определенный период времени (неделю/месяц/год). К таким доходам относятся заработная плата на основной работе, социальные трансферты, доход от стабильно работающего бизнеса, выплаты по любым долгосрочным договорам и др. **Случайные** доходы — это выплаты, периодичность которых невозможно спрогнозировать, при этом зачастую и сумма является разной. Самые распространенные источники случайного дохода: подработка, премии на основной работе, прибыль от недавно запущенного бизнеса, выигрыш в лотерею и др.
+5. *Легальные* и *теневые.* В отличие от **легальных** доходов, имеющих юридически оправданную форму, **теневые** доходы являются результатом неучтенных и противоправных видов деятельности. Теневые доходы бывают криминального происхождения (например, связанные с торговлей наркотиками, контрабандой, коррупцией и т.п.) и не криминальные по характеру (например, подпольные мастерские, торговля без лицензии и т.д.).
+6. *Номинальные* и *реальные.* **Номинальный** доход — это сумма денежных средств, которая получена частным лицом или семьей за определенный период времени и будет потрачена на приобретение товаров или услуг по цене, актуальной на период получения выплаты. **Реальный** доход характеризуется количеством товаров и платных услуг, которые можно приобрести на номинальный доход. Реальный доход еще называют *покупательской способностью.* Этот вид дохода учитывает такие факторы как налоги, тарифы и изменения ценовой политики.
+
+#### 8. Виды расходов домашних хозяйств (по важности, периодичности, постоянные и переменные, текущие и капитальные).
+
+**Расходы домашних хозяйств** — это фактические затраты на приобретение материальных и духовных ценностей.
+
+Существует несколько способов классификации расходов домашних хозяйств:
+* **По периодичности:** ежемесячные, ежегодные и сезонные расходы;
+* **По величине:** мелкие, средние и крупные;
+* **По важности:** обязательные, желательные, статусные;
+* **По срочности:** кратко-, средне- и долгосрочные;
+* **Текущие** и **капитальные** расходы.
+* **По функциональному назначению:** обязательные расходы, потребительские расходы, накопления.
+
+К *текущим* расходам домашнего хозяйства относят расходы на приобретение продовольственных товаров, непродовольственных товаров, используемых в течение относительно непродолжительного периода времени (обувь, одежда и т. п.), а также оплату периодически потребляемых услуг (например, таких, как услуги парикмахерской, прачечной, стоматолога и т.п.).
+
+*Капитальные* расходы включают в себя затраты на приобретение непродовольственных товаров, используемых в течение достаточно длительных промежутков времени (расходы на мебель, приобретение жилья, транспортных средств и т.д.). К этим расходам следует отнести затраты на услуги, которые участники домашнего хозяйства потребляют достаточно редко, а результат этих услуг, напротив, оказывает на них существенное влияние и определяет их жизнь в течение достаточно длительных промежутков времени (расходы на образование, на медицинскую операцию и т.д.).
+
+#### 9. Налоги: их сущность и виды (прямые и косвенные, пропорциональные и прогрессивные).
+
+**Налог** — обязательный, индивидуально безвозмездный платёж, принудительно взимаемый органами государственной власти различных уровней с организаций и физических лиц в целях финансового обеспечения деятельности государства и муниципальных образований.
+
+**Функции налогов:**
+* *Фискальная* — за счет налогов формируется доходная часть государственного бюджета;
+* *Распределительная* — перераспределение общественных доходов: органы власти взимают обязательные платежи с налогоплательщиков и направляют эти средства на поддержку малообеспеченных и незащищенных слоев населения;
+* *Регулирующая* — налоги направлены на решение тех или иных задач государства;
+* *Контрольная* — налоги позволяют государству отслеживать полноту и своевременность поступлений в бюджет денежных средств.
+
+В России применяется трехуровневая система налогообложения, в которой выделяются *федеральные*, *региональные* и *местные* налоги.
+
+**Прямые налоги** взимаются с дохода или имущества налогоплательщика и уплачиваются им за счет своих средств.
+**Косвенные налоги** взимаются с товаров и услуг, включаются в цену продукции и оплачиваются ее потребителями. К ним относится НДС и акцизы.
+
+По характеру ставок налоги делят на:
+* **пропорциональные налоги**, ставки которых являются неизменными вне зависимости от величины объекта налогообложения (например, налог на прибыль организаций);
+* **прогрессивные** – ставки налога повышаются по мере увеличения налоговой базы. К этой категории из российской практики можно отнести, например, НДФЛ, транспортный налог;
+* **регрессивные** – налоги, ставки которых уменьшаются по мере роста величины объекта налогообложения (страховые взносы, уплачиваемые работодателями).
+
+#### 10. Налогоплательщики и налоговые агенты, налоговые ставки, налоговые льготы.
+
+**Налогоплательщик** — физическое лицо или юридическое лицо (организация), на которое возложена обязанность уплачивать налоги в муниципальные или государственные налоговые органы в соответствии с налоговым законодательством.
+
+**Налоговый агент** — лицо в российском налоговом законодательстве, на которое возложены обязанности по исчислению, удержанию у налогоплательщика и перечислению налогов в бюджет.
+
+**Налоговая ставка** — это величина налога на единицу обложения (на единицу денежного дохода, земельной площади, измерения товара).
+
+**Налоговая льгота** — преимущество, предоставляемое государством либо местным самоуправлением определённой категории налогоплательщиков с целью снижения налогового бремени; один из элементов налоговой политики для решения социальных и экономических задач.
