--- a/src/pages/java/theory.mdx
+++ b/src/pages/java/theory.mdx
@@ -416,3 +416,95 @@ while (j > 0) {
 #### 26. Способы объявления массивов в Джава, использование операции new для выделения памяти для элементов массива. Объявление с инициализацией, объявление массива определенного размера без инициализации.
 
 Смотри вопрос 19 ↑
+
+#### 27. Объявление класса в Джава, пример объявления.
+
+Класс определяется с помощью ключевого слова `сlass`:
+
+```java
+class Person {
+
+}
+```
+
+В теле класса можно определять *поля* и *методы:*
+```java
+class Person {
+    String name;        // имя
+    int age;            // возраст
+
+    void displayInfo() {
+        System.out.printf("Name: %s \tAge: %d\n", name, age);
+    }
+}
+```
+
+#### 28. Использование this для доступа к компонентам класса.
+
+Ключевое слово `this` представляет ссылку на текущий экземпляр класса. Через это ключевое слово мы можем обращаться к переменным, методам объекта, а также вызывать его конструкторы. Например:
+
+```java
+class Person {
+    String name;
+    int age;      
+
+    void displayName() {
+        System.out.println(this.name);
+    }
+
+	void displayAge() {
+        System.out.println(this.age);
+    }
+}
+```
+
+#### 29. Создание или инстанциирование объектов типа класс.
+
+Кроме обычных методов классы могут определять специальные методы, которые называются **конструкторами.** Конструкторы вызываются при создании нового объекта данного класса. Конструкторы выполняют инициализацию объекта.
+
+Пример программы с классом, который имеет три конструктора с разным количеством параметров:
+
+```java
+public class Program {
+    public static void main(String[] args) {
+        Person bob = new Person();      // вызов первого конструктора без параметров
+        bob.displayInfo();
+
+        Person tom = new Person("Tom"); // вызов второго конструктора с одним параметром
+        tom.displayInfo();
+
+        Person sam = new Person("Sam", 25); // вызов третьего конструктора с двумя параметрами
+        sam.displayInfo();
+    }
+}
+
+class Person {
+    String name;    // имя
+    int age;        // возраст
+
+    Person() {
+        name = "Undefined";
+        age = 18;
+    }
+
+    Person(String n) {
+        name = n;
+        age = 18;
+    }
+
+    Person(String n, int a) {
+        name = n;
+        age = a;
+    }
+
+    void displayInfo(){
+        System.out.printf("Name: %s \tAge: %d\n", name, age);
+    }
+}
+```
+
+#### 30. Что такое класс в Java?
+
+Java является объектно-ориентированным языком, поэтому такие понятия как «класс» и «объект» играют в нем ключевую роль. Любую программу на Java можно представить как набор взаимодействующих между собой объектов.
+
+Шаблоном или описанием объекта является **класс**, а объект представляет *экземпляр* этого класса. Можно еще провести следующую аналогию. У нас у всех есть некоторое представление о человеке — наличие двух рук, двух ног, головы, туловища и т. д. Есть некоторый шаблон — этот шаблон можно назвать классом. Реально же существующий человек (фактически экземпляр данного класса) является объектом этого класса.
