📖 fill comp-maths digital integrals 1

--- a/src/pages/comp-maths/theory.mdx
+++ b/src/pages/comp-maths/theory.mdx
@@ -135,8 +135,41 @@ $$
 
 Для построения первого интерполяционного полинома Ньютона используют первую строку таблицы, а второго — побочную диагональ.
 
-#### 6. Обратное интерполирование.
+#### Численное интегрирование
 
-Обратное интерполирование применяют когда надо по известному значению функции найти **значение аргумента.**
+##### Численное интегрирование. Постановка задачи.
 
-Если функция монотонна, можно поменять местами функцию и аргумент и воспользоваться уже известными способами. Если же функция не монотонна, записываем любой интерполяционный полином, используя известные значения и решаем полученное уравнение относительно аргумента.
+Для заданной функции $f(x)$ найти:
+$$
+\int_{a}^{b} f(x) dx
+$$
+
+Способ должен быть:
+* **Универсальным**. Работать для любой функции.
+* **Экономичным**. Количество вычислений должно быть минимальным.
+* **Хорошо обусловленным**. Ошибка $\Delta x$ не должна сильно влиять на итоговую ошибку.
+
+##### Простейшие методы с использованием определения интеграла.
+Вспомним, как определяется определенный интеграл Римана. Рассмотрим на отрезке интегрирования $[a, b]$ сетку $a = x_0, x_1, \dots, x_n = b$. Возьмем от каждого отрезка по одной точке-представителю $\xi_i \in [x_{i-1, x_i}]$ и составим интегральную сумму:
+$$
+S_n = \sum_{i=1}^{N} f(\xi_i) \Delta x_i
+$$
+Значение интеграла определяется как предел при $\max \Delta x_i \rightarrow 0$ значений интегральных сумм:
+$$
+\int_{a}^{b} f(x)dx = \lim_{max \Delta x_i \to 0} \sum_{i=1}^{N} f(\xi_i) \Delta x_i
+$$
+
+##### Формула прямоугольников
+
+Возьмем в качестве приближенного значения интеграла значение некоторой интегральной суммы:
+$$
+\int_{a}^{b} f(x)dx \approx S_n = \sum_{i=1}^{N} f(\xi_i) \Delta x_i
+$$
+
+Возьмем в качестве $\xi_i$ середину отрезка $[x_{i-1}, x_i]$:
+$$
+\int_{a}^{b} f(x)dx \approx \sum_{i=1}^{N} f \left( \frac{x_{i-1} + x_i}{2} \right) \Delta x_i
+$$
+Методы численного интегрирования называют *квадратурными формулами* или просто *квадратурами*. Данный метод называется формулой средней точки или *формулой средних прямоугольников.*
+
+Выбор в качестве $\xi_i$ средней точки интервала не принципиален, можно взять, например, левый или правый конец интервала. Соответствующие формулы называются формулами *левых* и *правых* прямоугольников.
