🚀fill new disciplines

--- a/src/pages/archive/calculus/theory.mdx
+++ b/src/pages/archive/calculus/theory.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../layouts/TheoryLayout.astro
+layout: ../../../layouts/TheoryLayout.astro
 title: Математический анализ
 icon: chart-up
 subheader: кафедра высшей математики-3
