--- a/src/pages/archive/economics/theory.mdx
+++ b/src/pages/archive/economics/theory.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../layouts/TheoryLayout.astro
+layout: ../../../layouts/TheoryLayout.astro
 title: Экономическая культура
 icon: wallet
 subheader: кафедра экономики
