--- a/src/pages/archive/electro/theory.mdx
+++ b/src/pages/archive/electro/theory.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../layouts/TheoryLayout.astro
+layout: ../../../layouts/TheoryLayout.astro
 title: Электротехника
 icon: lightning-rod
 subheader: кафедра электротехнических систем
