--- a/src/pages/archive/infrastructure/theory.mdx
+++ b/src/pages/archive/infrastructure/theory.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../layouts/TheoryLayout.astro
+layout: ../../../layouts/TheoryLayout.astro
 title: Информационно-технологическая инфраструктура
 icon: flipchart
 subheader: кафедра практической и прикладной информатики ❤
