--- a/src/pages/archive/philosophy/theory.mdx
+++ b/src/pages/archive/philosophy/theory.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../layouts/TheoryLayout.astro
+layout: ../../../layouts/TheoryLayout.astro
 title: Философия
 icon: lincoln
 subheader: кафедра гуманитарных и социальных наук
