--- a/src/pages/archive/sports/theory.mdx
+++ b/src/pages/archive/sports/theory.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../layouts/TheoryLayout.astro
+layout: ../../../layouts/TheoryLayout.astro
 title: Физическая культура и спорт
 icon: weightlifter
 subheader: кафедра физического воспитания
