--- a/src/pages/archive/avmis/theory.mdx
+++ b/src/pages/archive/avmis/theory.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../layouts/TheoryLayout.astro
+layout: ../../../layouts/TheoryLayout.astro
 title: Архитектура вычислительных машин и систем
 icon: robotic-arm
 subheader: кафедра вычислительной техники
