--- a/src/pages/archive/comp-maths/theory.mdx
+++ b/src/pages/archive/comp-maths/theory.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../layouts/TheoryLayout.astro
+layout: ../../../layouts/TheoryLayout.astro
 title: Вычислительная математика
 icon: abacus
 subheader: кафедра прикладной математики
