--- a/src/pages/archive/java/theory.mdx
+++ b/src/pages/archive/java/theory.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../layouts/TheoryLayout.astro
+layout: ../../../layouts/TheoryLayout.astro
 title: Программирование на языке Джава
 icon: programming
 subheader: кафедра инструментального и прикладного программного обеспечения
