--- a/src/pages/archive/pois/theory.mdx
+++ b/src/pages/archive/pois/theory.mdx
@@ -1,5 +1,5 @@
 ---
-layout: ../../layouts/TheoryLayout.astro
+layout: ../../../layouts/TheoryLayout.astro
 title: Предметно-ориентированные информационные системы
 icon: warehouse
 subheader: кафедра практической и прикладной информатики ❤
